# lawmode

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  INSTALL.md  LICENSE  Makefile  PRD.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lawmode.yml
.lawmode/: DISCLAIMER.md  LAWYER_MODE_IS_ALWAYS_ON.md  mitigations.md  policy.yaml  review.json  risks.yaml
examples/: debug_agent.py  debug_chains.py  debug_llm.py  example_scan.py
lawmode/: __init__.py  cli.py  config.py  core.py  models.py
lawmode/chains/: __init__.py  chain_builder.py
lawmode/github/: __init__.py  app.py  pr_reviewer.py
lawmode/llm/: __init__.py  base.py  factory.py  grok.py
lawmode/tools/: __init__.py  base.py  courtlistener.py  eurlex.py  scholar.py  spdx.py
tests/: __init__.py  test_config.py  test_models.py  test_tools.py
tests/integration/: README.md  __init__.py  test_grok4_fast.py  test_grok_risks.py  test_grok_simple.py  test_grok_xai.py  test_local.py
vscode-extension/: README.md  package-lock.json  package.json  test-extension.md  test-mock.js
vscode-extension/src/: client.ts  diagnostics.ts  extension.ts  types.ts
vscode-extension/test_files/: test_clean.py  test_gdpr.py  test_gpl.py
